syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.gateway";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc SayByeBye (ByeRequest) returns (ByeReply) {}
}

message ByeRequest {
    string name = 1;
}

message ByeReply {
    string message = 1;
}

message HelloRequest {
    string name = 1;
    string additionalInfo = 2;
}

message HelloReply {
    string message = 1;
}


